<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/title_transacao"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <!--Nome-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:textColorHint="@color/cinza"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <!--Dados do cartao-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dados_cartao"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>
                <com.devmarvel.creditcardentry.library.CreditCardForm
                    android:id="@+id/cartaoCredito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:helper_text_color="@color/black_overlay"
                    app:include_helper="false"
                    app:include_zip="false"
                    android:imeOptions="actionNext"
                    app:hint_text_color="@color/cinza"
                    app:card_number_hint="@string/text_hint"
                    app:input_background="@drawable/cartaocredito_background"/>
            </LinearLayout>

            <!--Valor-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp">
                <EditText
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor"
                    android:textColorHint="@color/cinza"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:digits="0123456789."/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/efetuarTransacao"
        android:text="@string/efetuar_transacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:textColor="@color/white"
        android:layout_margin="8dp"/>
</LinearLayout>
